--- a/webservice/templates/error_response.html
+++ b/webservice/templates/error_response.html
@@ -1,3 +1,4 @@
+{%if ctx is defined %}
 {%extends "layout.html"%}
 
 {%block title%}
@@ -23,23 +24,30 @@ POMS
   <div class="ui hidden divider"></div>
     <div class="one field">
       <div class="field">
-	<label>An internal error occurred, data has been logged. Please report the occurrance to POMS administrators.</label>
+        <label>An internal error occurred, data has been logged. Please report the occurrance to POMS administrators.</label>
       </div>
     </div>
     {% if dump != "" %}
     <div class="ui hidden divider"></div>
     <div class="one field">
       <div class="field">
-	<label>{{message}}</label>
+        <label>{{message}}</label>
       </div>
     </div>
     <div class="ui hidden divider"></div>
     <div class="one field">
       <div class="field">
-	<label>Developers: the displayed stack trace can be stopped by setting dump = false in poms.ini.  It will still appear in the log.</label>
+        <label>Developers: the displayed stack trace can be stopped by setting dump = false in poms.ini.  It will still appear in the log.</label>
       </div>
     </div>
     {% endif %}
     <div class="ui hidden divider"></div>
 </div>
 {%endblock%}
+
+{%else%}
+<!DOCTYPE html>
+<html lang="en"><body>
+<h1>An internal error occurred, data has been logged. Please report the occurrance to POMS administrators.</h1>
+<p>{{message}}
+{%endif%}
