borked login_setup_snapshot field names in submission_details template

--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -280,15 +280,12 @@ Launch Recovery for Submission
 <h3>Login/Setup Snapshot</h3>
 
 
- <span class="fn">job_type_snapshot_id:</span> <span class="val">{{submission.login_setup_snapshot_obj.job_type_snapshot_id}}</span> <br>
- <span class="fn">job_type_id:</span> <span class="val">{{submission.login_setup_snapshot_obj.job_type_id}}</span> <br>
- <span class="fn">name:</span> <span class="val">{{submission.login_setup_snapshot_obj.name}}</span> <br>
+ <span class="fn">login_setup_snapshot_id:</span> <span class="val">{{submission.login_setup_snapshot_obj.login_setup_snapshot_id}}</span> <br>
+ <span class="fn">login_setup_id:</span> <span class="val">{{submission.login_setup_snapshot_obj.login_setup_id}}</span> <br>
  <span class="fn">experiment:</span> <span class="val">{{submission.login_setup_snapshot_obj.experiment}}</span> <br>
- <span class="fn">launch_script:</span> <span class="val">{{submission.login_setup_snapshot_obj.launch_script}}</span> <br>
- <span class="fn">definition_parameters:</span> <span class="val">{{submission.login_setup_snapshot_obj.definition_parameters}}</span> <br>
- <span class="fn">input_files_per_job:</span> <span class="val">{{submission.login_setup_snapshot_obj.input_files_per_job}}</span> <br>
- <span class="fn">output_files_per_job:</span> <span class="val">{{submission.login_setup_snapshot_obj.output_files_per_job}}</span> <br>
- <span class="fn">output_file_patterns:</span> <span class="val">{{submission.login_setup_snapshot_obj.output_file_patterns}}</span> <br>
+ <span class="fn">launch_host:</span> <span class="val">{{submission.login_setup_snapshot_obj.launch_host}}</span> <br>
+ <span class="fn">launch_account:</span> <span class="val">{{submission.login_setup_snapshot_obj.launch_account}}</span> <br>
+ <span class="fn">launch_setup:</span> <span class="val">{{submission.login_setup_snapshot_obj.launch_setup}}</span> <br>
  <span class="fn">creator:</span> <span class="val">{{submission.login_setup_snapshot_obj.creator}}</span> <br>
  <span class="fn">created:</span> <span class="val">{{submission.login_setup_snapshot_obj.created}}</span> <br>
  <span class="fn">updater:</span> <span class="val">{{submission.login_setup_snapshot_obj.updater}}</span> <br>
