Updated authorization error message

--- a/webservice/templates/unauthorized_user.html
+++ b/webservice/templates/unauthorized_user.html
@@ -21,7 +21,8 @@
           <li>Select the tile "Request Something".</li>
           <li>Select the tile "Experiment/Project/Collaboration Computing Account".</li>
           <li>Choose your experiment.</li>
-          <li>Choose the role "Production" or "Analysis".</li>
+          <li>Choose the role "Production" or "Analysis" (production shifters require "analysis" role only).</li>
+          <li>Production shifters only: request your experiment's production team to mark you as a shifter in POMS.</li>
         </ul>
         Please do <b>not</b> fill out an incident or request to POMS as access must be granted by your experiment.
         <br><br>
