--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/semantic.css">
 
     <script src="{{pomspath}}/static/js/semantic.js"></script>
-
+    <script src="{{pomspath}}/static/js/paging.js"></script>
     <script src="{{pomspath}}/static/js/poms.js"></script>
     <script src="{{pomspath}}/static/js/tablesort.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/poms.css">
