added paging widget, and enabled paging on the campaign grid
update css, page limit, and initialization

updated paging css to fit web service
theme, and created css file for it.

re-init paging after search/filter

v

trigger on change

updated paging to work well with filtering

Merged issue 23847

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -36,9 +36,9 @@
     <script src="{{pomspath}}/static/js/jquery-2.2.4.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/semantic.css">
-
+    <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/paging.css">
     <script src="{{pomspath}}/static/js/semantic.js"></script>
-
+    <script src="{{pomspath}}/static/js/paging.js"></script>
     <script src="{{pomspath}}/static/js/poms.js"></script>
     <script src="{{pomspath}}/static/js/tablesort.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/poms.css">
