--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -91,7 +91,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 <th>Creator</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="campaign_table_body">
         {% for s in tl|sort(attribute='name') %}
             <tr id="c_tr_{{loop.index}}">
                 <!-- id is hidden by css look for #campaign_table above -->
@@ -346,7 +346,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
    });
 </script>
 <script>
-
+var pager;
 $(document).ready(function() {
     $('#campaign_table').tablesorter( {
         widgets : [ 'filter', 'saveSort' ],
@@ -359,27 +359,33 @@ $(document).ready(function() {
         $("#display_message_modal").modal('show');
     }
     get_running();
+    $('#campaign_table').paging({limit:100});
+
+
+    $('#campaign_table')
+    .bind('filterInit', function() {
+        // check that storage ulility is loaded
+        if ($.tablesorter.storage) {
+            // get saved filters
+
+            var f = $.tablesorter.storage(this, 'tablesorter-filters') || [];
+            $(this).trigger('search', [f]);
+        }
+    })
+    .bind('filterEnd', function(){
+        if ($.tablesorter.storage) {
+            // save current filters
+            var f = $(this).find('.tablesorter-filter').map(function() {
+                $("#campaign_table").paging("instance").refresh();
+                return $(this).val() || '';
+            }).get();
+            $.tablesorter.storage(this, 'tablesorter-filters', f);
+        }
+    });
+
 });
 
-$('#campaign_table')
-.bind('filterInit', function() {
-    // check that storage ulility is loaded
-    if ($.tablesorter.storage) {
-        // get saved filters
 
-        var f = $.tablesorter.storage(this, 'tablesorter-filters') || [];
-        $(this).trigger('search', [f]);
-    }
-})
-.bind('filterEnd', function(){
-    if ($.tablesorter.storage) {
-        // save current filters
-        var f = $(this).find('.tablesorter-filter').map(function() {
-            return $(this).val() || '';
-        }).get();
-        $.tablesorter.storage(this, 'tablesorter-filters', f);
-    }
-});
 
 function get_running() {
   $.ajax({
