--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -20,6 +20,28 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
     #campaign_table td:nth-child(1) {
         display: none;
     }
+    .paging-nav {
+                text-align: right;
+                padding-top: 2px;
+            }
+            .paging-nav a{
+                margin: auto 1px;
+                text-decoration: none;
+                display: inline-block;
+                padding: 1px 7px;
+                background: #91b9e6;
+                color: white;
+                border-radius: 3px;
+            }
+            .paging-nav .selected-page{
+                background: #187ed5;
+                font-weight: bold;
+            }
+            .paging-nav, #tableData {
+                width: 400px;
+                margin: 0 auto;
+                font-family: Arial, sans-serif;
+            }
 
 
     stagelink {
@@ -359,6 +381,7 @@ $(document).ready(function() {
         $("#display_message_modal").modal('show');
     }
     get_running();
+    $('#campaign_table').paging({limit:100});
 });
 
 $('#campaign_table')
@@ -380,7 +403,7 @@ $('#campaign_table')
         $.tablesorter.storage(this, 'tablesorter-filters', f);
     }
 });
-$('#campaign_table').paging({limit:200});
+
 function get_running() {
   $.ajax({
       url: "{{pomspath}}/running_submissions/{{session_experiment}}/{{session_role}}?campaign_id_list={%for c in tl %}{{c.campaign_id}},{%endfor%}-1",
