--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -36,7 +36,7 @@
     <script src="{{pomspath}}/static/js/jquery-2.2.4.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/semantic.css">
-
+    <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/paging.css">
     <script src="{{pomspath}}/static/js/semantic.js"></script>
     <script src="{{pomspath}}/static/js/paging.js"></script>
     <script src="{{pomspath}}/static/js/poms.js"></script>
