--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -80,7 +80,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 <th>Active</th>
                 <th>Submis-<br>sions<br>Running</th>
                 <th data-sorter="false" data-filter="false">Submis-<br>sion<br>History</th>
-                <th data-sorter="false" data-filter="false">CPU &<br>Walltime<br>by Site</th>
+                <th data-sorter="false" data-filter="false">CPU &<br>Wall Time<br>by Site</th>
                 <th data-sorter="false" data-filter="false">Files<br>Report</th>
                 <th data-sorter="false" data-filter="false">Launch</th>
                 <th data-sorter="false" data-filter="false">Depend-<br>encies</th>
