--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -118,7 +118,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 </td>
                 <td>
                   {%if data.authorized_shifter[loop.index0] %}
-                    <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{session_experiment}}/{{session_role}}?campaign_id={{s.campaign_id}}')">
+                    <button onclick="disable_icon(this); confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{session_experiment}}/{{session_role}}?campaign_id={{s.campaign_id}}');">
                         <i class="chart rocket icon blue"></i>
                     </button>
                   {%else%}
@@ -385,6 +385,11 @@ $(document).ready(function() {
 
 });
 
+function disable_icon(icon){
+    $(icon).attr("disabled", true);
+    $(icon).children('i').eq(0).addClass("spinner");
+    $(icon).children('i').eq(0).addClass("loading");
+}
 
 
 function get_running() {
