--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -51,12 +51,17 @@ all the time...
   </div>
 
   <script>
-   function confirm_call(msg, url) {
-       var r = confirm(msg);
-       if ( r ) {
-           location.assign(url)
-       }
-   }
+   function confirm_call(msg, url, icon = null) {
+    var r = confirm(msg);
+    if ( r ) {
+        if (icon != null){
+            $(icon).attr("disabled", true);
+            $(icon).children('i').eq(0).addClass("spinner");
+            $(icon).children('i').eq(0).addClass("loading");
+        }
+        location.assign(url)
+    }
+ }
   </script>
 
   <div class="ui horizontal segments">
