--- a/webservice/templates/campaign_stage_submissions.html
+++ b/webservice/templates/campaign_stage_submissions.html
@@ -29,20 +29,30 @@ Campaign Stage:&nbsp;&nbsp; {{stage_name}}
 <!-- 
 -->
 <script>
- function confirm_call(msg, url) {
-         var r = confirm(msg);
-     if ( r ) {
-         location.assign(url)
-     }
+ function confirm_call(msg, url, icon = null) {
+    var r = confirm(msg);
+    if ( r ) {
+        if (icon != null){
+            $(icon).attr("disabled", true);
+            $(icon).children('i').eq(0).addClass("spinner");
+            $(icon).children('i').eq(0).addClass("loading");
+        }
+        location.assign(url)
+    }
  }
 </script>
 
 <script>
- function confirm_call(msg, url) {
-         var r = confirm(msg);
-     if ( r ) {
-         location.assign(url)
-     }
+ function confirm_call(msg, url, icon = null) {
+    var r = confirm(msg);
+    if ( r ) {
+        if (icon != null){
+            $(icon).attr("disabled", true);
+            $(icon).children('i').eq(0).addClass("spinner");
+            $(icon).children('i').eq(0).addClass("loading");
+        }
+        location.assign(url)
+    }
  }
 </script>
 
