Filters split types to show on list Validates last split matches a campaign stage snapshot within the same campaign and shares the same split type as the current campaign stage Adds a custom input field for last split value on modal
error checking on back end

fixed syntax error

More error logic

more logic

log

is an int

more fun with int

more general exception handling

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -85,17 +85,20 @@ all the time...
           <tbody id="last_split_body">
               <tr>
                 <td>
-                  <input type="hidden" name="campaign_stage_id" value="{{CampaignStage.campaign_stage_id}}">
-                    <select name="campaign_stage_snapshot_id" id="campaign_stage_snapshot_id">
-                        <option value="0">-</option>
-                        {% for cs in campaign_stage_snapshots %}
-                          {% if CampaignStage.cs_last_split == cs[0] %}
-                            <option selected value="{{cs[0]}}">{{cs[0]}} - {{cs[1]}} - ({{cs[2]}})</option>
-                          {%else%}
-                            <option value="{{cs[0]}}">{{cs[0]}} - {{cs[1]}} - ({{cs[2]}})</option>
-                          {%endif%}
-                        {% endfor %}
-                    </select>
+                  <input type="hidden" name="campaign_stage_id" value="{{CampaignStage.campaign_stage_id}}"/>
+                  <label for="last_split_custom_val">Enter a custom last split value</label>
+                  <input type="number" name="last_split_custom_val" id="last_split_custom_val" placeholder="{{CampaignStage.cs_last_split}}"/>
+                  <label for="campaign_stage_snapshot_id">Or select from the following options</label>
+                  <select name="campaign_stage_snapshot_id" id="campaign_stage_snapshot_id">
+                      <option value="0">-</option>
+                      {% for cs in campaign_stage_snapshots %}
+                        {% if CampaignStage.cs_last_split == cs[0] %}
+                          <option selected value="{{cs[0]}}">{{cs[0]}} - {{cs[1]}} - ({{cs[2]}})</option>
+                        {%else%}
+                          <option value="{{cs[0]}}">{{cs[0]}} - {{cs[1]}} - ({{cs[2]}})</option>
+                        {%endif%}
+                      {% endfor %}
+                  </select>
                 </td>
               </tr>
           </tbody>
