--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -111,7 +111,7 @@ all the time...
             <tr>
               <th colspan="2">
                 <div class="actions">
-                  <button class="ui button deny red">Cancel</button>
+                  <button type="button" class="ui button deny red">Cancel</button>
                   <button type="submit" class="ui button approve teal">Accept</button>
                 </div>
               </th>
