--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -91,6 +91,7 @@ Campaign Stages
 
         </script>
         {% endif %}
+        <td id="c_campaign_stage_clear_cronjob_{{loop.index}}">{{row.CampaignStage.default_clear_cronjob}}</td>
         <td id="c_authorized_{{loop.index}}" style="display:none">{{data.authorized[loop.index0]}}</td>
         <td id="c_campaign_definition_id_{{loop.index}}" style="display:none">{{row.CampaignStage.job_type_id}}</td>
         <td id="c_launch_id_{{loop.index}}" style="display:none">{{row.CampaignStage.login_setup_id}}</td>
@@ -203,7 +204,7 @@ Campaign Stages
         </div>
       </div>
 
-      <div class="two fields">
+      <div class="three fields">
         <div class="field">
             <label>Dataset or Split Data </label>
             <input type="text" id="ae_dataset" name="ae_dataset" placeholder="dataset" style="width: 90%"></input>
@@ -215,6 +216,16 @@ Campaign Stages
             <input type="text" id="ae_split_type" name="ae_split_type" style="width:90%">
             <i class="edit link blue icon" onclick="split_type_picker.start('ae_split_type')"></i>
         </div>
+        <div class="field">
+          <label>Default Clear Crontab</label>
+          <input type="checkbox" id="default_clear_cronjob">
+          <a target="_blank">
+            <i style="float: none" class="icon small help circle link tooltip">
+              <span class="tooltiptext">If enabled, POMS will automatically clear crontab<br> entries when you run out of slices.</span>
+            </i>
+          </a>
+        
+      </div>
       </div>
 
       <div class="two fields">
@@ -742,7 +753,7 @@ function edit_campaign(index,clone) {
   //
   $("#ae_completion_type").val($("#c_completion_type_"+index).text() ).trigger('change');
   $("#ae_completion_pct").val( $("#c_completion_pct_"+index).text() );
-
+  $("#default_clear_cronjob").prop("checked", $("#c_campaign_stage_clear_cronjob_"+index).text().toLowerCase().includes("t") );
   $("#campaign_add_edit_modal").modal('show');
 
   console.log("clone = : " + clone)
