--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -91,7 +91,7 @@ Campaign Stages
 
         </script>
         {% endif %}
-        <td id="c_campaign_stage_clear_cronjob_{{loop.index}}">{{row.CampaignStage.default_clear_cronjobs}}</td>
+        <td id="c_campaign_stage_clear_cronjob_{{loop.index}}">{{row.CampaignStage.default_clear_cronjob}}</td>
         <td id="c_authorized_{{loop.index}}" style="display:none">{{data.authorized[loop.index0]}}</td>
         <td id="c_campaign_definition_id_{{loop.index}}" style="display:none">{{row.CampaignStage.job_type_id}}</td>
         <td id="c_launch_id_{{loop.index}}" style="display:none">{{row.CampaignStage.login_setup_id}}</td>
