added ability to update default_clear_cronjob field

--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -218,7 +218,7 @@ Campaign Stages
         </div>
         <div class="field">
           <label>Default Clear Crontab</label>
-          <input type="checkbox" id="default_clear_cronjob">
+          <input name="default_clear_cronjob" type="checkbox" id="default_clear_cronjob">
           <a target="_blank">
             <i style="float: none" class="icon small help circle link tooltip">
               <span class="tooltiptext">If enabled, POMS will automatically clear crontab<br> entries when you run out of slices.</span>
