Add to campaign overview page

--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -22,8 +22,12 @@
 
 {%block header%}
 <h1 class="ui header">
-          Campaign Overview of Campaign {{tag}}
+          Campaign Overview: {{tag}}
 </h1>
+{%endblock%}
+
+{%block subheader%}
+Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?campaign_name={{s.name|urlencode}}">{{s.name}}</a> <span class="ui label">{{s.campaign_id}}</span>
 {%endblock%}
 
 {%block subheader%}
@@ -32,41 +36,86 @@
 
 {%block content %}
            
-	   <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?campaign_name={{s.name|urlencode}}">{{s.name}}</a> </td>
-	    <a href="{{pomspath}}/campaign_stage_submissions/{{session_experiment}}/{{session_role}}?campaign_name={{s.name}}&stage_name=*&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}">
-		<button type="button">
-		<i class="chart line icon"></i>
-		</button>
-	    </a>
-	    <a href="{{pomspath}}/campaign_task_files/{{session_experiment}}/{{session_role}}?&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}">
-		<button type="button">
-		<i class="clipboard outline icon"></i>
-		</button>
-	    </a>
-	    <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{session_experiment}}/{{session_role}}?campaign_id={{s.campaign_id}}', this);">
-		<i class="chart rocket icon blue"></i>
-	    </button>
-	    <a href="{{pomspath}}/campaign_deps/{{session_experiment}}/{{session_role}}?campaign_name={{s.name|urlencode}}">
-		<button type="button">
-		    <i class="sitemap icon"></i>
-		</button>
-	    </a>
-	    <a href="{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?campaign={{s.name|urlencode}}">
-		<button class="button">
-		    <i class="edit icon blue"></i>
-		</button>
-	    </a>
-	    <button class="button" onclick="delete_campaign('{{s.name}}', '{{s.campaign_id}}');">
-		<i class="trash blue icon"></i>
-	    </button>
-	Tags:
-	    {% for tag in s.tags %}
-		{{tag.tag_name}}
-	    {% endfor %}
-
-      <hrule>
-
-      {{svgdata|safe}}
+		<div class="ui horizontal segments">
+			<div class="ui segment raised">
+				<h3>Reports/Status</h3>
+				<div class=menu>
+					<div class=item>
+						<a href="{{pomspath}}/campaign_stage_submissions/{{session_experiment}}/{{session_role}}?campaign_name={{s.name}}&stage_name=*&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}" target='_blank'>
+							<i class="chart line icon"></i> Campaign Stage Submissions
+						</a>
+					</div>
+					<div class=item>
+					   	<a href="{{pomspath}}/campaign_deps/{{session_experiment}}/{{session_role}}?campaign_name={{s.name|urlencode}}" target='_blank'>
+							<i class="sitemap icon"></i> Campaign Dependencies
+					   	</a>
+					</div>
+					<div class=item>
+						<i class="clipboard outline icon"></i>
+						<a href="{{pomspath}}/campaign_task_files/{{session_experiment}}/{{session_role}}?&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}">
+							<i class="external file icon" data-content="List file statistics for Submissions for CampaignStage" data-variation="basic"></i> Campaign Submission Files
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="ui segment raised">
+				<h3>Actions</h3>
+				<div class=menu>
+					<div class=item>
+						<button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{session_experiment}}/{{session_role}}?campaign_id={{s.campaign_id}}', this);">
+							<i class="chart rocket icon blue"></i> Launch Campaign
+						</button>
+					</div>
+					<div class=item>
+					   	<a href="{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?campaign={{s.name|urlencode}}" target='_blank'>
+							<i class="edit icon blue"></i> Edit Campaign
+						</a>
+					</div>
+					<div class=item>
+						<button class="button" onclick="delete_campaign('{{s.name}}', '{{s.campaign_id}}');">
+							<i class="trash blue icon"></i> Delete Campaign
+						</button>
+					</div>
+				</div> 
+			</div> 
+		</div>  
+		<div class="ui horizontal segments">
+			<div class="ui segment raised">
+				<h3>Campaign Tags</h3>
+				<div style="overflow-y: scroll;" >
+					{% for tag in s.tags %}
+					{{tag.tag_name}}
+					{% endfor %}
+				</div>
+			</div>
+			<div style="max-height:300px;" class="ui segment raised">
+				<h3>Campaign Stages</h3>
+				<div style="overflow-y: scroll;" >
+					{% for CampaignStage in s.stages %}
+					<b>Stage</b>: <a href="{{pomspath}}/campaign_stage_info/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}">{{CampaignStage.name}}</a> <span class="ui label">{{CampaignStage.campaign_stage_id}}</span><br/>
+					{% endfor %}]
+				</div>
+			</div>
+		</div>
+		<div class="ui segment raised">
+		<h3>Launch/Setup</h3>
+			<b>Name</b>: {{login_setup_info.LoginSetup.name}}<br/>
+			<b>Experiment</b>: {{CampaignStage.experiment}}<br/>
+			<b>Launch Host</b>: {{login_setup_info.LoginSetup.launch_host}}<br/>
+			<b>Launch Account</b>: {{login_setup_info.LoginSetup.launch_account}}<br/>
+			<b>Launch Setup</b>: {{login_setup_info.LoginSetup.launch_setup}}<br/>
+			<b>Creator</b>: {{login_setup_info.Experimenter.username}}<br/>
+			<b>Created</b>: {{login_setup_info.LoginSetup.created}}<br/>
+			<b>Updater</b>: {{login_setup_info.Experimenter.username}}<br/>
+			<b>Updated</b>: {{login_setup_info.LoginSetup.updated}}<br/>
+		</div>
+		<div class="ui segment raised">
+			<h3>Campaign Overview</h3>
+			<br/>
+			<hrule>
+				{{svgdata|safe}}
+			</div>
+		</div>
 
 {%endblock%}
 
