--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -83,7 +83,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 					<b>Experiment</b>: {{c.experiment}}<br/>
 					<b>Creator</b>: {{c.experimenter_creator_obj.username}}<br/>
 					<b>Defaults</b>: {{c.defaults}}<br/>
-					<b>Active</b>: {{c.active}<br/>
+					<b>Active</b>: {{c.active}}<br/>
 					<b>Campaign Type</b>: {{c.campaign_type}}<br/>
 					<b>Campaign Keywords</b>: {{c.campaign_keywords}}<br/>
 			</div>
