--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -79,13 +79,13 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 		<div class="ui horizontal segments">
 			<div class="ui segment raised">
 				<h3>Campaign Details</h3>
-					<b>Name</b>: {{c.name}}<br/>
-					<b>Experiment</b>: {{c.experiment}}<br/>
-					<b>Creator</b>: {{c.experimenter_creator_obj.username}}<br/>
-					<b>Defaults</b>: {{c.defaults}}<br/>
-					<b>Active</b>: {{c.active}}<br/>
-					<b>Campaign Type</b>: {{c.campaign_type}}<br/>
-					<b>Campaign Keywords</b>: {{c.campaign_keywords}}<br/>
+					<b>Name</b>: {{s.name}}<br/>
+					<b>Experiment</b>: {{s.experiment}}<br/>
+					<b>Creator</b>: {{s.experimenter_creator_obj.username}}<br/>
+					<b>Defaults</b>: {{s.defaults}}<br/>
+					<b>Active</b>: {{s.active}}<br/>
+					<b>Campaign Type</b>: {{s.campaign_type}}<br/>
+					<b>Campaign Keywords</b>: {{s.campaign_keywords}}<br/>
 			</div>
 			<div class="ui segment raised">
 				<h3>Campaign Tags</h3>
@@ -98,7 +98,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 			<div style="max-height:300px;" class="ui segment raised">
 				<h3>Campaign Stages</h3>
 				<div style="overflow-y: scroll;" >
-					{% for CampaignStage in c.stages %}
+					{% for CampaignStage in s.stages %}
 					<b>Stage</b>: <a href="{{pomspath}}/campaign_stage_info/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}">{{CampaignStage.name}}</a> <span class="ui label">{{CampaignStage.campaign_stage_id}}</span><br/>
 					{% endfor %}]
 				</div>
