--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -77,9 +77,9 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 			</div> 
 		</div>  
 		<div class="ui horizontal segments" >
-			<div class="ui segment raised" style="max-width: 33%; max-height: 400px; overflow-y: scroll;">
+			<div class="ui segment raised" style="max-width: 33%; ">
 				<h3>Campaign Details</h3>
-				<div style="max-width: 33%; max-height: 400px; overflow-y: scroll;">
+				<div style="max-height: 300px; overflow-y: scroll;">
 					<b>Name</b>: {{s.name}}<br/>
 					<b>Experiment</b>: {{s.experiment}}<br/>
 					<b>Creator</b>: {{s.experimenter_creator_obj.username}}<br/>
@@ -91,7 +91,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 			</div>
 			<div class="ui segment raised" >
 				<h3>Campaign Tags</h3>
-				<div style="max-width: 33%; max-height: 400px; overflow-y: scroll;">
+				<div style="max-width: 33%; max-height: 300px; overflow-y: scroll;">
 					{% for tag in s.tags %}
 					{{tag.tag_name}}
 					{% endfor %}
@@ -99,7 +99,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 			</div>
 			<div style="max-height:300px;" class="ui segment raised">
 				<h3>Campaign Stages</h3>
-				<div style="max-width: 33%; max-height: 400px; overflow-y: scroll;">
+				<div style="max-width: 33%; max-height: 300px; overflow-y: scroll;">
 					{% for CampaignStage in s.stages %}
 					<b>Stage</b>: <a href="{{pomspath}}/campaign_stage_info/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}">{{CampaignStage.name}}</a> <span class="ui label">{{CampaignStage.campaign_stage_id}}</span><br/>
 					{% endfor %}]
