--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -99,7 +99,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 			</div>
 			<div style="max-height:300px;" class="ui segment raised">
 				<h3>Campaign Stages</h3>
-				<div style="max-width: 33%; max-height: 300px; overflow-y: scroll;">
+				<div style="max-height: 300px; overflow-y: scroll;">
 					{% for CampaignStage in s.stages %}
 					<b>Stage</b>: <a href="{{pomspath}}/campaign_stage_info/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}">{{CampaignStage.name}}</a> <span class="ui label">{{CampaignStage.campaign_stage_id}}</span><br/>
 					{% endfor %}]
